--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
     </div>
 
     <script>
-        // --- CRITICAL CHANGE: RENDER URL REPLACEMENT ---
-        // Your live Render service URL is now hardcoded here, pointing to the '/generate' endpoint.
+        // --- CRITICAL CHANGE: RENDER URL HAS BEEN HARDCODED ---
+        // This is the live URL pointing to your deployed Render Web Service endpoint.
         const API_URL = 'https://lilith-cli.onrender.com/generate';
         // --- END CRITICAL CHANGE ---
 
