--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <!-- Terminal Output Area -->
         <div id="output" class="text-sm">
             <p class="text-green-500 font-bold mb-4">
-                [ Lilith CLI v1.0.0 ] Initializing connection to Gemini API...
+                [ Lilith CLI v1.0.0 ] Initializing connection...
             </p>
             <p>Type your query and hit Enter to communicate with the service.</p>
         </div>
