--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <div id="startupOverlay" class="fixed inset-0 bg-black bg-opacity-95 flex flex-col items-center justify-center z-50 text-white">
         <h1 class="text-4xl font-bold text-green-400 mb-8">Lilith CLI Interface</h1>
         <button onclick="startApp()" class="px-8 py-4 bg-green-600 text-lg font-bold rounded-xl hover:bg-green-700 transition duration-300 shadow-lg ring ring-green-400 ring-opacity-50">
-            Click to Start & Enable Audio
+            wakeup server and initialize LILITH_CLI interface..(CLICK HERE)
         </button>
         <p class="mt-4 text-sm text-gray-400">Audio playback requires a user interaction in most browsers.</p>
     </div>
