--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
         
         body {
             font-family: 'Inconsolata', monospace;
-            /* * BACKGROUND IMAGE ADDED (Replaced 1000009457.png with placeholder for functionality)
+            /* ** UPDATED: Using 1000009457.png as the primary body background file. **
              * A linear-gradient overlay is applied to ensure text readability over the image.
              */
-            background-image: linear-gradient(rgba(13, 17, 23, 0.9), rgba(13, 17, 23, 0.9)), 
-                url('https://placehold.co/1200x800/101827/ffffff?text=CLI+BACKGROUND+TEXTURE');
+            background-image: linear-gradient(rgba(13, 17, 23, 0.9), rgba(13, 17, 23, 0.9)), url('1000009457.png');
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
@@ -108,13 +107,12 @@
             margin-bottom: 0.5rem;
         }
         
-        /* NEW: Custom styling for the startup button with placeholder image background */
+        /* ** UPDATED: Custom styling for the startup button using 1000009468.png ** */
         .startup-button {
-            /* CORRECTED SYNTAX: Background image with a dark green overlay for readability.
-               Replaced 1000009468.png with a green-themed placeholder. */
+            /* Background image with a dark green overlay for readability. */
             background-image: 
                 linear-gradient(rgba(35, 134, 54, 0.7), rgba(35, 134, 54, 0.7)), 
-                url('https://placehold.co/800x400/065f46/ffffff?text=Activate+System');
+                url('1000009468.png');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -122,11 +120,10 @@
         }
 
         .startup-button:hover {
-            /* Increase overlay opacity on hover. 
-               Replaced 1000009457.png with a slightly different green placeholder. */
+            /* Increase overlay opacity on hover, using 1000009457.png */
             background-image: 
                 linear-gradient(rgba(35, 134, 54, 0.9), rgba(35, 134, 54, 0.9)), 
-                url('https://placehold.co/800x400/059669/ffffff?text=Waking+Up');
+                url('1000009457.png');
         }
 
     </style>
